# django-model-metadata

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  isort.cfg  pyproject.toml
django_model_metadata/: admin.py  apps.py  forms.py  model_mixins.py  models.py  serializers.py  urls.py  views.py
django_model_metadata/migrations/: 0001_initial.py  0002_modelgeneralmetadata_created_at_and_more.py
